--- a/style/style.css
+++ b/style/style.css
@@ -507,13 +507,15 @@ html {
 
 #modal {
   position: fixed;
-  background-color: rgb(186, 191, 42);
+  background-color: rgb(97, 97, 113);
+  opacity: 0.97;
   padding: 40px;
   border-radius: 20px;
   width: 70%;
   top: 30%;
   left: 15%;
   text-align: center;
+  border: 3px solid black;
 }
 #modal .modal-title {
   font-family: "Outfit", sans-serif;
@@ -521,10 +523,15 @@ html {
   font-size: 1em;
   color: rgb(45, 47, 119);
   font-size: 1.5em;
+  color: white;
 }
 #modal .modal-paragraph {
   font-family: "Inter", sans-serif;
   font-size: 1em;
+  color: white;
+}
+#modal .meal-chosen {
+  color: rgb(186, 191, 42);
 }
 #modal #close-btn {
   font-family: "Outfit", sans-serif;
@@ -535,14 +542,16 @@ html {
   display: flex;
   justify-content: flex-end;
   cursor: pointer;
+  color: black;
 }
-#modal .close-btn:hover {
+#modal #close-btn:hover {
   color: white;
 }
 #modal .modal-price-wrapper .dollar, #modal .modal-price-wrapper .modal-total-price {
   font-family: "Inter", sans-serif;
   font-size: 1em;
   font-size: 1.5em;
+  color: white;
 }
 
 @media (max-width: 1250px) {
@@ -553,8 +562,20 @@ html {
   .accomodation-card-wrapper .accomodation-information-wrapper .accommodation-description-paragraph {
     display: none;
   }
+  #modal {
+    left: 13%;
+  }
 }
 @media (max-width: 979px) {
+  .landing-page-background .landing-search-wrapper .input-center-wrapper {
+    justify-content: space-around;
+  }
+  .landing-page-background .landing-search-wrapper .input-center-wrapper .input-wrapper {
+    flex: 1;
+  }
+  .landing-page-background .landing-search-wrapper .input-center-wrapper .input-wrapper #search-button-wrapper {
+    max-width: 30px;
+  }
   .accomodation-card-wrapper {
     flex-direction: column;
   }
@@ -570,6 +591,9 @@ html {
   }
   .current-accommodation-wrapper .meals-available-section .meal-wrapper .meal-image-wrapper {
     padding: 20px 0;
+  }
+  #modal {
+    left: 10%;
   }
 }
 @media (max-width: 800px) {
@@ -612,5 +636,8 @@ html {
   }
   .current-accommodation-wrapper .current-accommodation-amenities-wrapper .top-wrapper, .current-accommodation-wrapper .current-accommodation-amenities-wrapper .bottom-wrapper {
     flex-direction: column;
+  }
+  #modal {
+    left: 9%;
   }
 }/*# sourceMappingURL=style.css.map */
